--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Relax Fishing</title>
 
 <meta property="og:title" content="Relax Fishing - DX GAMES">
@@ -1083,6 +1083,9 @@ function drawUI(){
 }
 
 checkAssetsLoading();
+</script>
+</body>
+</html>sLoading();
 </script>
 </body>
 </html>
