Update Open Graph meta tags and icons

--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Relax Fishing</title>
 
-<meta property="og:title" content="Relax Fishing - DX GAMES">
-<meta property="og:description" content="¡Relájate pescando en este simulador tranquilo! 🎣">
+<meta property="og:title" content="Relax Fishing - v1.0">
+<meta property="og:description" content="¡Relájate pescando en este divertido simulador de pesca! 🎣">
 <meta property="og:image" content="https://i.postimg.cc/nVPfcJFB/previsualizacion.jpg">
 <meta property="og:type" content="website">
 
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:image" content="https://i.postimg.cc/nVPfcJFB/previsualizacion.jpg">
-<link rel="apple-touch-icon" href="https://i.postimg.cc/XvSVN0gT/icono.png">
-<link rel="icon" href="https://i.postimg.cc/XvSVN0gT/icono.png">
+<link rel="apple-touch-icon" href="https://i.postimg.cc/02vB0d53/icono.jpg">
+<link rel="icon" href="https://i.postimg.cc/02vB0d53/icono.jpg">
 
 
 <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;600&display=swap" rel="stylesheet">
